--- a/p1/Makefile
+++ b/p1/Makefile
@@ -1,11 +1,3 @@
-BBLU		=	\033[1;34m
-BGREEN		=	\033[1;32m
-BRED		=	\033[1;31m
-BLU			=	\033[0;34m
-GRN			=	\033[0;32m
-RED			=	\033[0;31m
-RST			=	\033[0m
-
 NAME = p1
 
 all: up clean-windows
@@ -15,6 +7,8 @@ up:
 
 down:
 	vagrant destroy -f
+
+re: down up
 
 clean-windows:
 	powershell -Command "if (Test-Path ./confs/token) { Remove-Item ./confs/token }"
