--- a/p3/Vagrantfile
+++ b/p3/Vagrantfile
@@ -14,6 +14,7 @@ Vagrant.configure("2") do |config|
     server.vm.network "private_network", ip: "192.168.56.110"
 
     # Provision scripts
+    server.vm.synced_folder "./confs", "/home/vagrant/confs"
     server.vm.provision "shell", path: "./scripts/setup.sh"
     server.vm.provision "shell", path: "./scripts/deploy.sh"
   end
