gitlab accesible in browser succesfully

--- a/bonus/Makefile
+++ b/bonus/Makefile
@@ -13,7 +13,7 @@ re: down up
 vm:
 	vagrant ssh iot-gitlab
 
-# Helper commands for development
+# Essential commands
 verify:
 	vagrant ssh iot-gitlab -c "bash /home/vagrant/scripts/verify.sh"
 
@@ -24,6 +24,7 @@ passwords:
 	vagrant ssh iot-gitlab -c "echo 'GitLab root password:'; cat /tmp/gitlab-root-password.txt 2>/dev/null || echo 'Not available yet'"
 	vagrant ssh iot-gitlab -c "echo 'ArgoCD admin password:'; cat /tmp/argocd-admin-password.txt 2>/dev/null || echo 'Not available yet'"
 
+# Monitoring commands
 logs-gitlab:
 	vagrant ssh iot-gitlab -c "kubectl logs -n gitlab -l app=webservice --tail=50"
 
@@ -33,8 +34,15 @@ logs-argocd:
 status:
 	vagrant ssh iot-gitlab -c "kubectl get pods -A"
 
+debug:
+	vagrant ssh iot-gitlab -c "echo '=== CLUSTER STATUS ==='; kubectl get nodes"
+	vagrant ssh iot-gitlab -c "echo '=== ALL PODS ==='; kubectl get pods -A"
+	vagrant ssh iot-gitlab -c "echo '=== GITLAB PODS ==='; kubectl get pods -n gitlab"
+	vagrant ssh iot-gitlab -c "echo '=== DEPLOYMENTS ==='; kubectl get deployments -n gitlab"
+	vagrant ssh iot-gitlab -c "echo '=== EVENTS ==='; kubectl get events -n gitlab --sort-by='.lastTimestamp' | tail -10"
+
 # Test all requirements
 test:
 	vagrant ssh iot-gitlab -c "bash /home/vagrant/scripts/test-requirements.sh"
 
-.PHONY: all up down re vm verify configure passwords logs-gitlab logs-argocd status test
+.PHONY: all up down re vm verify configure fix-gitlab passwords logs-gitlab logs-argocd status debug test
