bonus: gitlab install successfully in local

--- a/bonus/Makefile
+++ b/bonus/Makefile
@@ -13,20 +13,23 @@ re: down up
 vm:
 	vagrant ssh iot-gitlab
 
+sync:
+	vagrant ssh iot-gitlab -c "kubectl apply -f confs/will-app.yaml"
+
 # Essential commands
 verify:
 	vagrant ssh iot-gitlab -c "bash /home/vagrant/scripts/verify.sh"
 
-configure:
-	vagrant ssh iot-gitlab -c "bash /home/vagrant/scripts/configure-gitlab.sh"
-
 passwords:
-	vagrant ssh iot-gitlab -c "echo 'GitLab root password:'; cat /tmp/gitlab-root-password.txt 2>/dev/null || echo 'Not available yet'"
-	vagrant ssh iot-gitlab -c "echo 'ArgoCD admin password:'; cat /tmp/argocd-admin-password.txt 2>/dev/null || echo 'Not available yet'"
+	@echo "GitLab root password:"
+	@vagrant ssh iot-gitlab -c "kubectl exec -n gitlab deployment/gitlab -- cat /etc/gitlab/initial_root_password 2>/dev/null | grep 'Password:' || echo 'Not available yet - GitLab still starting'"
+	@echo ""
+	@echo "ArgoCD admin password:"
+	@vagrant ssh iot-gitlab -c "kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath='{.data.password}' 2>/dev/null | base64 -d || echo 'Not available yet'"
 
 # Monitoring commands
 logs-gitlab:
-	vagrant ssh iot-gitlab -c "kubectl logs -n gitlab -l app=webservice --tail=50"
+	vagrant ssh iot-gitlab -c "kubectl logs -n gitlab deployment/gitlab --tail=50"
 
 logs-argocd:
 	vagrant ssh iot-gitlab -c "kubectl logs -n argocd -l app.kubernetes.io/name=argocd-server --tail=50"
@@ -41,8 +44,5 @@ debug:
 	vagrant ssh iot-gitlab -c "echo '=== DEPLOYMENTS ==='; kubectl get deployments -n gitlab"
 	vagrant ssh iot-gitlab -c "echo '=== EVENTS ==='; kubectl get events -n gitlab --sort-by='.lastTimestamp' | tail -10"
 
-# Test all requirements
-test:
-	vagrant ssh iot-gitlab -c "bash /home/vagrant/scripts/test-requirements.sh"
 
-.PHONY: all up down re vm verify configure fix-gitlab passwords logs-gitlab logs-argocd status debug test
+.PHONY: all up down re vm verify configure fix-gitlab passwords logs-gitlab logs-argocd status debug test sync
