--- a/bonus/confs/gitlab-simple.yaml
+++ b/bonus/confs/gitlab-simple.yaml
@@ -24,14 +24,14 @@ spec:
         env:
         - name: GITLAB_OMNIBUS_CONFIG
           value: |
-            external_url 'http://192.168.56.111:8080'
-            gitlab_rails['gitlab_host'] = '192.168.56.111'
+            external_url 'http://localhost:8080'
+            gitlab_rails['gitlab_host'] = 'localhost'
             gitlab_rails['gitlab_port'] = 8080
             gitlab_rails['gitlab_https'] = false
             nginx['listen_port'] = 80
             nginx['listen_https'] = false
             nginx['redirect_http_to_https'] = false
-            gitlab_rails['gitlab_ssh_host'] = '192.168.56.111'
+            gitlab_rails['gitlab_ssh_host'] = 'localhost'
             gitlab_rails['gitlab_ssh_port'] = 2222
             # Disable problematic features for stability
             gitlab_rails['gitlab_signup_enabled'] = false
