--- a/bonus/confs/gitlab-simple.yaml
+++ b/bonus/confs/gitlab-simple.yaml
@@ -51,13 +51,13 @@ spec:
             }
             # Disable memory-intensive features
             prometheus_monitoring['enable'] = false
-      resources:
-        requests:
-          memory: "3Gi"
-          cpu: "1000m"
-        limits:
-          memory: "6Gi"
-          cpu: "2000m"
+        resources:
+          requests:
+            memory: "3Gi"
+            cpu: "1000"
+          limits:
+            memory: "6Gi"
+            cpu: "2000m"
         volumeMounts:
         - name: gitlab-data
           mountPath: /var/opt/gitlab
