--- a/bonus/confs/gitlab-simple.yaml
+++ b/bonus/confs/gitlab-simple.yaml
@@ -54,7 +54,7 @@ spec:
         resources:
           requests:
             memory: "3Gi"
-            cpu: "1000"
+            cpu: "1000m"
           limits:
             memory: "6Gi"
             cpu: "2000m"
